--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 ### JupyterNotebooks ###
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
+__pycache__/
 
 ### sample_result_submission ###
 starting_kit/sample_result_submission/*
