--- a/competition.yaml
+++ b/competition.yaml
@@ -17,23 +17,12 @@ pages:
 - title: Terms
   file: sub-terms.md
 tasks:
-- index: 0
-  name: Classification
-  description: Classification task for phase 1 and 2
-  key: 578fc53f-035e-4c66-9217-de5dc63f7d6f
-  is_public: false
-  input_data: 41aa1a59-6257-441f-a49d-9a682e128209
-  scoring_program: 737627a4-46f2-4a8a-bdf7-c7d86e8f68e4
-  ingestion_program: f5b4c4da-68cf-4c7f-9b14-28b47b853633
-- index: 1
-  name: Classification
-  description: Classification task for phase 1 and 2
-  key: 578fc53f-035e-4c66-9217-de5dc63f7d6f
-  is_public: false
-  input_data: 41aa1a59-6257-441f-a49d-9a682e128209
-  scoring_program: 737627a4-46f2-4a8a-bdf7-c7d86e8f68e4
-  ingestion_program: f5b4c4da-68cf-4c7f-9b14-28b47b853633
-solutions: []
+  - index: 0
+    name: Classification
+    description: Classification task for phase 1 and 2
+    scoring_program: scoring_program
+    ingestion_program: ingestion_program
+    input_data: sample_data/
 phases:
 - index: 0
   name: Development Phase
@@ -49,7 +38,7 @@ phases:
   auto_migrate_to_this_phase: false
   hide_output: false
   tasks:
-  - 1
+  - 0
   solutions: []
 - index: 1
   name: Final Phase
@@ -63,7 +52,7 @@ phases:
   auto_migrate_to_this_phase: false
   hide_output: false
   tasks:
-  - 1
+  - 0
   solutions: []
 leaderboards:
 - index: 0
