--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ __pycache__/
 ### sample_result_submission ###
 starting_kit/sample_result_submission/*
 sample_code_submission_*
+*.pickle
+*.predict
