--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ __pycache__/
 
 ### sample_result_submission ###
 starting_kit/sample_result_submission/*
-sample_code_submission_*
+sample_code_submission/*.pickle
 *.pickle
 *.predict
+scoring_output/*
+sample_result_submission/*
