--- a/competition.yaml
+++ b/competition.yaml
@@ -1,6 +1,6 @@
 version: '2'
 title: STYLE-TRANS-FAIR
-docker_image: ihsaanullah/codalab-legacy:gpu
+docker_image: ktgiahieu/codalab-legacy-with-tensorflow:3.8
 description: STYLE-TRANS-FAIR competition M1[AI] 2022-2023
 has_registration: False                 # We do not check participants, registration is free
 force_submission_to_leaderboard: True   # If false, participants must submit manually, do not change
@@ -9,7 +9,7 @@ enable_detailed_results: True           # True if html file written
 enable_forum: True                      # Forum active
 admin_names: guyon,pavao                # Admin people that can help you will have access to your competition
 end_date: null                          # Never ends
-image: images/logo.jpg
+image: images/dark_logo.jpg
 terms: terms.md
 pages:
 - title: Overview
@@ -20,6 +20,8 @@ pages:
   file: evaluation.md
 - title: Terms
   file: terms.md
+- title: Files
+  file: files.md
 tasks:
   - index: 0
     name: Classification
