--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.0.5
 backcall==0.2.0
 Bottleneck==1.3.5
 certifi==2022.12.7
+chardet==5.1.0
 charset-normalizer==3.0.1
 cloudpickle==2.0.0
 comm==0.1.2
@@ -65,7 +66,11 @@ threadpoolctl==2.2.0
 tifffile==2021.7.2
 toolz==0.12.0
 tornado==6.2
+tqdm==4.65.0
 traitlets==5.7.1
 urllib3==1.26.14
 wcwidth==0.2.5
 wheel==0.37.1
+torch==2.0.0
+torchaudio==2.0.0
+torchvision==0.15.0
